# agent-py

./: README.md
echo-policy/: Cargo.toml  README.md
echo-policy/k8s/: envoy-extension.yaml
echo-policy/releases/: echo_policy.wasm
echo-policy/src/: lib-header-mode.rs  lib.rs
envoy-add-client-info-for-azure-ad-token/: Cargo.toml  README.md
envoy-add-client-info-for-azure-ad-token/k8s/: combined-multi-wasm-policy.yaml  envoy-extension.yaml
envoy-add-client-info-for-azure-ad-token/releases/: envoy_add_client_info_for_azure_ad_token.wasm
envoy-add-client-info-for-azure-ad-token/src/: lib.rs
