[package]
name = "echo-policy"
version = "0.1.0"
edition = "2021"
description = "Envoy Gateway Echo WASM policy – echoes request details back to the client"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"          # optimise for small binary size
lto = true
strip = "debuginfo"
