[package]
name = "envoy-add-client-info-for-azure-ad-token"
version = "0.1.0"
edition = "2021"
description = "Envoy Gateway policy that decodes Azure AD JWT and extracts claims as headers"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
log = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = "debuginfo"
